# csmt-gnn

./: .zenodo.json  00_START_HERE.md  CITATION.cff  ENGINEERING_NOTES.md  LICENSE  README.md  RELEASE_MANIFEST.json  SUBMISSION_NOTES.md  arxiv_metadata.json  ast_preprocessor.py  csmt_gnn.py  diagnostics.py  inference_ast.py  pyproject.toml  requirements.txt  train.py  transformer_baseline.py
paper/: README.md  main.bbl  main.tex  references.bib
results/: architecture_cost_table.json  block_size_sensitivity_32_64_128.json  block_size_sensitivity_32_64_128.md  block_sweep_b16.json  block_sweep_b4.json  block_sweep_b8.json  cvd_mask_audit.json  data_pipeline_validation.json  diagnostic_cvd_control_1_5.json  diagnostic_cvd_control_1_5.md  diagnostic_poc_cvd_control_seed1.json  diagnostic_poc_cvd_control_seed2.json  diagnostic_poc_cvd_control_seed3.json  diagnostic_poc_cvd_control_seed4.json  diagnostic_poc_cvd_control_seed5.json  diagnostic_poc_lowcompute.json  diagnostic_poc_quick_arch_update.json  diagnostic_poc_transformer.json  diagnostic_poc_transformer_b128.json  diagnostic_poc_transformer_b16.json  diagnostic_poc_transformer_b32.json  diagnostic_poc_transformer_b4.json  diagnostic_poc_transformer_b64.json  diagnostic_poc_transformer_seed1.json  diagnostic_poc_transformer_seed2.json  diagnostic_poc_transformer_seed3.json  diagnostic_poc_transformer_seed4.json  diagnostic_poc_transformer_seed5.json  diagnostic_seed_sweep_1_5.json  diagnostic_seed_sweep_1_5.md  lowcompute_validation_summary.json  lowcompute_validation_summary.md  prefix_ast_degradation_lowcompute.json  (+9 more)
(+16 files in other folders)
