[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csmt-gnn"
version = "0.1.3"
description = "Structure-aware code language model prototype with AST features, prefix block graph attention, and CVD."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
  "tree-sitter>=0.21",
  "tree-sitter-python>=0.21",
]

[tool.setuptools]
py-modules = ["ast_preprocessor", "csmt_gnn", "diagnostics", "inference_ast", "train", "transformer_baseline"]
